--- a/Adoptados/index.html
+++ b/Adoptados/index.html
@@ -7,7 +7,7 @@
     <título ><h1>ONG - AYUDA A UN PELUDO </h1></título>
 </head>
 <body>
-<h6>bienvenido a la pagina de adopcion de animales explora la pagina y adopta un amigo peludo</h6>
+<h6>Bienvenido a la pagina de adopcion de animales explora la pagina y adopta un amigo peludo</h6>
 
 <h1>Nuestros integrantes:</h1>
 <ul>
